# faber_loom_local_v2

./: .gitattributes  .gitignore  AGENTS.md  Dockerfile  ESTADO_AVANCE_ETAPA1_Y_FOUNDATION_BETA_20260706.md  ESTADO_E2_0_CIERRE_20260706.md  ESTADO_E3_CIERRE_PARCIALES_20260710.md  LICENSE  MANIFIESTO_APPEND_20260630_SPACELOOM_SPIKE_E1.md  PROCUREMENT_LEDGER.md  cierre_etapa1_faberloom.md  cierre_etapa2_faberloom.md  docker-compose.yml  patch-byok-env-routing.js
app/: FaberLoom.spec  FaberLoom_Installer.spec  SpaceLoom.spec  VERSION  build.py  entrypoint.py  pyproject.toml  requirements-server.txt
app/scripts/: atv_smoke.py  audit_curator_capabilities.py  backup_postgres.sh  backup_restore_smoke.py  bootstrap_postgres_for_tests.py  check_backup_smoke_freshness.py  check_canary_isolation.py  check_canary_isolation_postgres.py  cutover_sqlite_to_postgres.sh  generate_olas_3_5_skills.py  ingest_kb_h3.py  load_pack2_golden.py  make_icon.py  migrate_minio_objects_to_tenant_prefix.py  migrate_minio_tenant_prefix.py  onboard_design_partner.py  postgres_rls_policies.sql  routing_evidence_report.py  run_weekly_reports.py  run_weekly_reports.sh  smoke_e2e_prod.py  soak_report.py  sqlite_to_postgres.py
app/src/: ambient.py  ambient_detectors.py  ambient_models.py  api.py  archetypes.py  audit.py  auth.py  backup.py  billing.py  config_cascade.py  context.py  db.py  db_adapter.py  draft_engine.py  e3_3_router.py  entity_identity.py  faberloom_catalog.py  features.py  gold.py  golden_harvester.py  health_dashboard.py  ingest.py  installer.py  kb.py  kb_extractors.py  key_broker.py  (+19 more)
(+1506 files in other folders)
