[project]
name = "faberloom"
version = "0.2.0"
description = "FaberLoom local-first desktop app"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pywebview>=5.0",
  "jinja2>=3.1.0",
  "aiofiles>=24.1.0",
  "pydantic>=2.8.0",
  "openai>=1.40.0",
  "anthropic>=0.32.0",
  "cryptography>=42.0.0",
  "pdfplumber>=0.11.0",
  "openpyxl>=3.1.0",
  "filetype>=1.2.0",
  "chardet>=5.0.0",
  "python-multipart>=0.0.12",
  "jsonschema>=4.0",
  "pyjwt>=2.8.0",
  "sqlcipher3>=0.5.0",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]

[tool.uvicorn]
factory = false

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "pyinstaller>=6.21.0",
]
